[package]
name = "min_rep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_backroll = "0.4.0"
backroll_transport_udp = "0.4.0"
tracing-subscriber = "0.3.15"
bitflags = "1.2.1"
bytemuck = {version = "1.5.1", features = ["derive"]}